--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,10 @@
    <!-- Here specify the version of Cayenne you are actually using -->
 	  <version>3.0RC2</version>
     </dependency>
+    <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.6</version>
+</dependency>
   </dependencies>
 </project>
