--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
 	<groupId>mysql</groupId>
 	<artifactId>mysql-connector-java</artifactId>
 	<version>5.1.6</version>
-</dependency>
+    </dependency>
+   <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-log4j12</artifactId>
+    	<version>1.5.2</version>
+    </dependency>
+    <dependency>
+	<groupId>commons-codec</groupId>
+	<artifactId>commons-codec</artifactId>
+	<version>1.6</version>
+</dependency>            
   </dependencies>
 </project>
